# archytas

./: .gitignore  MCP_TOOLS_IMPLEMENTATION_SUMMARY.md  README.md  demo_mcp_tools.py  dev-requirements.txt  publish.sh  pyproject.toml  requirements.txt  run_tests.sh
.github/workflows/: main.yml  publish.yml
archytas/: agent.py  archytypes.py  auth.py  chat_history.py  constants.py  demo_tools.py  exceptions.py  julia.py  language_environment.py  mcp_tools.py  message_schemas.py  multimodal.py  prompt.py  python.py  react.py  repl.py  search.py  structured_data_utils.py  summarizers.py  test.py  tool_utils.py  tools.py  utils.py
archytas/models/: __init__.py  anthropic.py  azure.py  base.py  base_family.py  base_provider.py  bedrock.py  config.py  gemini.py  groq.py  model.py  ollama.py  openai.py  openrouter.py  openrouter_model_names.py  openrouter_models.py  shortcuts.py  tool_convert.py
archytas/models/families/: __init__.py  claude.py  gemini.py  generic.py  gpt.py  llama.py
archytas/models/providers/: __init__.py  anthropic.py  azure.py  bedrock.py  gemini.py  groq.py  ollama.py  openai.py  openrouter.py
archytas/prompts/summarization/: default_history_summarization_system.jinja  default_history_summarization_user.jinja
demos/: demo_mcp_context7.py  demo_mcp_duckduckgo.py  demo_mcp_vision.py
docs/: MCP_QUICK_START.md
src/archytas/: agent.py  prompt.py  react.py  test.py  tools.py
tests/: README.md  _tbd.py  conftest.py  fake_model.py  pytest.ini  test_agent_set_model.py  test_anthropic_temperature.py  test_archytypes.py  test_auth_env_precedence.py  test_bedrock.py  test_chat_history.py  test_context_management.py  test_future_annotations.py  test_legacy_auto_context_compat.py  test_mcp_tools.py  test_more_structured_types.py  test_multimodal_tools.py  test_oversized_message_summarization.py  test_prompt_assembly.py  test_python_tool.py  test_react_basic.py  test_react_loop_control.py  test_serde.py  test_signatures.py  test_statetool_token_tracking.py  test_statetools.py  test_tools.py
tests/fixtures/: mock_mcp_server.py
tests/legacy/: test_archytypes.py  test_more_structured_types.py  test_structured_types.py
