[project]
name = "archytas"
version = "1.5.1"
description = "A library for pairing LLM agents with tools so they perform open ended tasks"
authors = [
    {name = "David Andrew Samson", email = "david.andrew.engineer@gmail.com"},
    {name = "Matthew Printz", email = "matt@jataware.com"}
]
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = [
    "openai>=1.64",
    "rich>=13.3.4",
    "docstring-parser>=0.16",
    "pytz>=2023.3",
    "toml>=0.10.2",
    "frozendict>=2.3.8",
    "pydantic>=1.9.0",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-community>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-groq>=0.2",
    "anthropic>=0.49",
    "langchain-ollama>=0.2",
    "langchain-google-genai>=2.1",
    "botocore>=1.37",
    "langchain-aws>=0.2",
    "azure-ai-inference>=1.0.0b9",
    "jinja2>=3.1.6"
]

[project.optional-dependencies]
dev = [
    "easyrepl>=0.1.2",
    "pytest>=8.3.3"
]

[project.scripts]
chat-repl = "archytas.repl:start_repl"

[project.urls]
"Homepage" = "https://github.com/jataware/archytas"
"Bug Tracker" = "https://github.com/jataware/archytas/issues"

[tool.poetry]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry>=2.0.0", "poetry-core"]
build-backend = "poetry.core.masonry.api"
