[project]
name = "archytas"
version = "1.6.8"
description = "A library for pairing LLM agents with tools so they perform open ended tasks"
authors = [
    {name = "David Andrew Samson", email = "david.andrew.engineer@gmail.com"},
    {name = "Matthew Printz", email = "matt@jataware.com"}
]
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = [
    "openai>=2.26",
    "rich>=13.3.4",
    "docstring-parser>=0.16",
    "pytz>=2023.3",
    "toml>=0.10.2",
    "frozendict>=2.3.8",
    "pydantic>=2.12",
    "langchain>=1.2",
    "langchain-core>=1.2",
    "langchain-community>=0.4",
    "langchain-openai>=1.1",
    "langchain-anthropic>=1.3",
    "langchain-groq>=1.1",
    "anthropic>=0.84",
    "langchain-ollama>=1.0.1",
    "langchain-google-genai>=4.2",
    "botocore>=1.42",
    "langchain-aws>=1.4",
    "azure-ai-inference>=1.0.0b9",
    "jinja2>=3.1.6",
    "toki>=0.2.8",
    "langchain-mcp-adapters>=0.2",
]

[project.optional-dependencies]
dev = [
    "easyrepl>=0.1.2",
    "pytest>=8.4.2",
    "pytest-asyncio",
    "pytest-xdist",
]
testing = [
    "pytest>=8.4.2",
    "pytest-asyncio",
    "pytest-xdist",
    "fastmcp>=0.1.0",
]

[project.scripts]
chat-repl = "archytas.repl:start_repl"

[project.urls]
"Homepage" = "https://github.com/jataware/archytas"
"Bug Tracker" = "https://github.com/jataware/archytas/issues"

[tool.poetry]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry>=2.0.0", "poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio",
    "pytest-xdist",
]
testing = [
    "pytest>=8.4.2",
    "pytest-asyncio",
    "pytest-xdist",
    "fastmcp>=0.1.0",
]
