[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archytas"
version = "2.0.4"
description = "A library for pairing LLM agents with tools so they perform open ended tasks"
authors = [
    {name = "David Andrew Samson", email = "david.andrew.engineer@gmail.com"},
    {name = "Matthew Printz", email = "matt@jataware.com"}
]
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = [
    "openai>=2.0",
    "rich>=13.3.4",
    "docstring-parser>=0.16",
    "pytz>=2023.3",
    "toml>=0.10.2",
    "frozendict>=2.3.8",
    "pydantic>=1.9.0",
    "langchain>=1.0",
    "langchain-core>=1.0",
    "langchain-community>=0.4",
    "langchain-openai>=1.0",
    "langchain-anthropic>=1.0",
    "langchain-groq>=1.0",
    "anthropic>=0.70",
    "langchain-ollama>=1.0",
    "langchain-google-genai>=4.2",
    "botocore>=1.37",
    "langchain-aws>=1.0",
    "azure-ai-inference>=1.0.0b9",
    "jinja2>=3.1.6",
    "toki>=0.2.8",
    "langchain-mcp-adapters>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "easyrepl>=0.1.2",
    "pytest>=8.4.2",
    "pytest-asyncio",
    "pytest-xdist",
]
testing = [
    "pytest>=8.4.2",
    "pytest-asyncio",
    "pytest-xdist",
    "fastmcp>=0.1.0",
]

[project.scripts]
chat-repl = "archytas.repl:start_repl"

[project.urls]
"Homepage" = "https://github.com/jataware/archytas"
"Bug Tracker" = "https://github.com/jataware/archytas/issues"

[tool.hatch.envs.default]
dependencies = [
  "bump-my-version",
]
[tool.hatch.envs.default.scripts]
bump = "bump-my-version bump {args:--help}"

[tool.hatch.build.targets.wheel]
packages = ["archytas"]

[tool.hatch.build.targets.sdist]
include = [
    "archytas",
    "README.md",
    "LICENSE",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio",
    "pytest-xdist",
]
testing = [
    "pytest>=8.4.2",
    "pytest-asyncio",
    "pytest-xdist",
    "fastmcp>=0.1.0",
]

[tool.bumpversion]
current_version="2.0.4"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<release>[ab])(?P<revision>\\d+))?"
serialize = [
  "{major}.{minor}.{patch}{release}{revision}",
  "{major}.{minor}.{patch}"
]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[tool.bumpversion.parts.release]
values = [
  "a",
  "b",
]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
